docs: add relation filter query param in docs
